argocd-manage-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: polymetrie-c
  labels:
    argocd.argoproj.io/managed-by: nb-test-argocd
