argocd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nb-test-argocd
