backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: polymetrie-c
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/metrics'
    prometheus.io/port: '8080'
spec:
  selector:
    app: backend
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
