argocd-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: nb-test-argocd
spec:
  ingressClassName: nginx
  rules:
    - host: argo.orch-team-c.pns-projects.fr.eu.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-argocd-server
                port:
                  number: 8080
